--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.6.1
   firebase_storage: ^12.4.0
   firebase_ui_auth: ^1.16.0
+  firebase_dynamic_links: ^6.1.0
 
 dev_dependencies:
   flutter_test:
