--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^12.4.0
   firebase_ui_auth: ^1.16.0
   firebase_dynamic_links: ^6.1.0
+  firebase_database: ^11.3.0
 
 dev_dependencies:
   flutter_test:
