--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_ui_auth: ^1.16.0
   firebase_dynamic_links: ^6.1.0
   firebase_database: ^11.3.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
