--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.10.5+4  # Ensures camera support
+  path_provider: ^2.1.2  # Needed for storing images
+
 
 
   # The following adds the Cupertino Icons font to your application.
